Fix parsing crash and creation of ice servers from turn server json.